Refactor TypeScript config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
-    "extends": "@tsconfig/node21/tsconfig.json",
-
-    "include": ["app/**/*"],
-    "exclude": ["**/*.spec.ts"],
-    "compilerOptions": {
-        "rootDir": "app",
-        "outDir": "build",
-        "sourceMap": true
-    }
+    "files": [],
+    "references": [
+      { "path": "./app" },
+      { "path": "./tools" }
+    ]
 }
