--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "typescript": "^5.7.3"
   },
   "scripts": {
-    "start": "node build/main.js",
+    "start": "node build/app/main.js",
     "tokenize-test": "node build/main.js tokenize test.lox"
   }
 }
